bugfix: renumbering slot id in ReduceRedundantJump